--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -31,7 +31,8 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add .
+          git add ':/*.json'
+          git add ':/*.xz'
           git status -s
           git commit -m "update on $(date '+%Y-%m-%dT%H:%M:%SZ')"
       - name: Push changes
