--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -39,6 +39,6 @@ jobs:
         if: steps.update.outcome == 'success'
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PAT }}
           force: true
   
