--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
 jobs:
   updateData:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash -l {0}
